--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h2>Título h2</h2>
     <h3>Título h3</h3>
     <h4>Título h4</h4>
+    <h5>Título h5</h5>
     <div>
       <p>Hola mundo</p>
       <p>Este es mi primer sitio web</p>
